# django-getpaid

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES  CONTRIBUTING.rst  Dockerfile.test  HISTORY.rst  HISTORY_OLD.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cobertura.xml  compose.test.yml  coverage.xml  main.py  manage.py  pyproject.toml  pyproject.toml.old  requirements.txt  requirements_dev.txt  requirements_doc.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yml  codacy-coverage-reporter.yml  release.yml  run_tox.yml
.plans/: 2026-02-13-django-getpaid-v3-design.md  2026-02-13-django-getpaid-v3-implementation.md  2026-02-13-documentation-overhaul.md
.sisyphus/evidence/: task-2-build-django.txt  task-2-metadata-inventory.txt  task-2-pytest-django.txt
docs/: Makefile  backends.rst  catalog.rst  changelog.md  changelog.rst  conf.py  configuration.md  contributing.md  custom_backends.rst  customization.md  customization.rst  getting-started.md  index.md  index.rst  installation.rst  migration-v2-to-v3.md  plugin-catalog.md  plugins.md  plugins.rst  processor.rst  registry.md  registry.rst  requirements.txt  roadmap.md  roadmap.rst  settings.rst  signals.rst  workflow.rst
docs/api/: index.md
docs/example/: conf.py  index.rst  installation.rst  usage.rst
docs/old_docs/: backends.rst  index.rst  installation.rst
docs/source/: backends.rst  conf.py  contributors.rst  custom_backends.rst  index.rst  installation.rst  settings.rst  south.rst  workflow.rst
example/: README.md  manage.py
example/example/: settings.py  settings_docs.py  urls.py  wsgi.py
example/example/orders/: __init__.py  apps.py  forms.py  listeners.py  views.py
example/orders/: __init__.py  admin.py  apps.py  factories.py  forms.py  listeners.py  models.py  serializers.py  signals.py  views.py
example/orders/migrations/: 0001_initial.py  0002_auto_20180711_1455.py  0002_auto_20200417_2107.py  0002_custompayment.py  0003_auto_20181112_1420.py  0003_custompayment_redirect_uri.py  0003_fix_amount_refunded_precision.py  0004_auto_20200403_1554.py  0004_auto_20200529_1019.py  0004_fix_amount_locked_verbose_name.py  0005_auto_20200405_0152.py  0005_auto_20200608_1220.py  0005_remove_fsm_fields.py  0006_auto_20200608_1221.py  0006_custompayment_provider_data.py  0007_alter_custompayment_external_id_alter_order_name_and_more.py  0007_auto_20200610_0949.py  0008_alter_custompayment_status.py  0008_auto_20200717_1134.py  0009_auto_20200729_1316.py
example/orders/templates/: home.html
example/paywall/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
example/paywall/migrations/: 0001_initial.py  0002_auto_20200417_2107.py  0003_auto_20200419_1500.py  0004_remove_fsm_fields.py
example/templates/getpaid/: base.html  payment_expired.html  payment_failed.html  payment_success.html
getpaid/: __init__.py  abstract_mixin.py  abstracts.py  adapters.py  admin.py  apps.py  async_detection.py  async_runner.py  bridge.py  callback_security.py  checks.py  converters.py  exceptions.py  flow_adapter.py  forms.py  middleware.py  models.py  post_forms.py  processor.py  registry.py  repository.py  runtime.py  signals.py  status.py  tests.py  types.py  urls.py  utils.py  validators.py  views.py
getpaid/backends/: __init__.py
getpaid/backends/dotpay/: __init__.py  urls.py  views.py
getpaid/backends/dummy/: __init__.py  apps.py  forms.py  models.py  processor.py  urls.py  views.py
getpaid/backends/epaydk/: __init__.py  forms.py  urls.py  views.py
getpaid/backends/moip/: __init__.py  models.py  urls.py  views.py
getpaid/migrations/: 0001_initial.py  0002_auto_20150723_0923.py  0002_auto_20200403_1554.py  0002_auto_20200417_2107.py  0003_auto_20200405_0152.py  0003_payment_redirect_uri.py  0003_remove_fsm_fields.py  0004_auto_20200529_1019.py  0004_payment_provider_data.py  0005_alter_payment_amount_locked_and_more.py  0005_auto_20200608_1220.py  0005_payout.py  0006_auto_20200608_1221.py  0006_payment_unique_external_id.py  0006_payout_customer_name.py  0007_merge_20200608_1234.py  0007_unique_non_failed_payment_per_order.py  0008_alter_payment_external_id.py  0008_auto_20200610_0949.py  0009_alter_payment_status.py  0009_auto_20200610_1134.py
getpaid/rest_framework/: apps.py  payment_creator.py  serializers.py  urls.py  views.py
getpaid/templatetags/: getpaid.py
getpaid_test_project/: manage.py  pip.req  requirements.txt
getpaid_test_project/getpaid_test_project/: settings.py  settings_docs.py  settings_local.py  settings_test.py  urls.py  wsgi.py
getpaid_test_project/orders/: forms.py  tests.py  views.py
tests/: conftest.py  database.py  example_settings.py  factories.py  settings.py  settings_default_payment.py  test_abstracts.py  test_admin_actions.py  test_async_runtime.py  test_bridge.py  test_callback_adapter.py  test_callback_view.py  test_database_settings.py  test_deprecated_cleanup.py  test_dummy_backend.py  test_epaydk.py  test_flow_adapter.py  test_forms.py  test_fsm.py  test_global_callback_view.py  test_integration.py  test_migration_checks.py  test_model_and_processor.py  test_models.py  test_order.py  test_payment_ownership.py  test_paynow_integration.py  test_payu.py  test_payu_rest.py  test_processor.py  test_przelewy24.py  test_public_api.py  test_reexports.py  test_registry.py  test_repository_async.py  test_system_checks.py  test_transferuj.py  test_utils.py  test_views.py  tools.py  (+1 more)
tests/default_order_app/: apps.py  models.py
tests/dummy/: conftest.py  factories.py  test_dummy_fsm.py  test_dummy_integration.py  test_dummy_registry.py
tests/e2e/: conftest.py  test_e2e_paynow.py
tests/payu/: conftest.py  factories.py  test_client.py  test_getpaid_payu.py  test_marketplace.py  test_payouts.py  test_payu_registry.py  test_refunds.py
tests/transfer/: factories.py  test_transfer_integration.py  test_transfer_registry.py
(+85 files in other folders)
