[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-getpaid"
version = "3.0.0a1"
description = "Multi-broker payment processor for Django."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2",
    "swapper>=1.4",
    "getpaid-core>=0.1.0",
]

[dependency-groups]
dev = [
    "django>=6.0.2",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.8.1",
    "ruff>=0.15.1",
    "tox>=4.35.0",
    "ty>=0.0.16",
    "getpaid-core @ file:///${PROJECT_ROOT}/../getpaid-core",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "example"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["getpaid"]

# --- Ruff config ---
[tool.ruff]
preview = true
fix = true
target-version = "py312"
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "DTZ",  # flake8-datetimez
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",
  "COM812",
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "ISC001",
  "ISC003",
  "PLR09",
  "PLR2004",
  "PLR6301",
  "TRY003",
  "RUF012",
]
external = [ "WPS" ]
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 9
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
