[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-getpaid"
version = "3.0.0a1"
description = "Multi-broker payment processor for Django."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["django", "payments", "getpaid", "payment-gateway", "payment-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "Django>=5.2",
    "swapper>=1.4",
    "python-getpaid-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/django-getpaid/django-getpaid"
Documentation = "https://django-getpaid.readthedocs.io/"
Repository = "https://github.com/django-getpaid/django-getpaid"
Changelog = "https://github.com/django-getpaid/django-getpaid/blob/master/docs/changelog.md"
"Issue Tracker" = "https://github.com/django-getpaid/django-getpaid/issues"

[dependency-groups]
dev = [
    "django>=6.0.2",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.8.1",
    "ruff>=0.15.1",
    "tox>=4.35.0",
    "ty>=0.0.16",
    "python-getpaid-core @ file:///${PROJECT_ROOT}/../getpaid-core",
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "myst-parser>=5.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "example"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["getpaid"]

# --- Ruff config ---
[tool.ruff]
preview = true
fix = true
target-version = "py312"
line-length = 80

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "DTZ",  # flake8-datetimez
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",
  "B027",
  "C408",    # unnecessary dict() call (readability preference)
  "C901",    # function too complex (pre-existing)
  "COM812",
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "FBT001",  # boolean positional arg (API compatibility)
  "ISC001",
  "ISC003",
  "N802",    # function name should be lowercase (backward compat CHOICES)
  "N805",    # first arg should be self (classproperty uses cls)
  "N806",    # variable in function should be lowercase (swapper pattern)
  "N813",    # camelcase imported as lowercase (project convention: ps, fs, bm, cm)
  "N818",    # exception naming
  "PLC0415", # imports inside functions (circular import workarounds)
  "PLR09",
  "PLR2004",
  "PLR6201", # use set literal for membership (readability)
  "PLR6301",
  "SIM102",  # nested if (readability preference)
  "SLF001",  # private member access (_meta, _get_processor are semi-public)
  "TRY003",
  "TRY300",  # consider moving to else block
  "UP042",   # str+Enum → StrEnum (cannot use StrEnum due to subclassing limitation)
  "RUF012",
]
external = [ "WPS" ]
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 9
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "PT015", "PT018", "PLW1514", "SIM115", "SIM117", "N817", "B011", "PIE810", "PTH100", "PTH118", "PTH120"]
"example/**" = ["PTH100", "PTH118", "PTH120", "S105"]
